src/test/ui/did_you_mean/issue-34126.stderr
error[E0596]: cannot borrow immutable argument `self` as mutable
  --> $DIR/issue-34126.rs:6:23
   |
LL |         self.run(&mut self); //~ ERROR cannot borrow
   |                       ^^^^
   |                       |
   |                       cannot reborrow mutably
   |                       try removing `&mut` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
